Added MultiCreateContactsV1 and UpdateContactV1 handles - updated tests - added batch size into config.yml
